log
Thu 09 May 2024 04:26:59 AM UTC: 
 tests:  1|8
total_score: 0/70
86273dc
Thu 09 May 2024 04:30:03 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
7144170
Thu 09 May 2024 04:44:33 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|7
total_score: 5/70
5f90242
Thu 09 May 2024 04:47:33 AM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
83a3342
Thu 09 May 2024 04:56:46 AM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:14: error: unused variable ‘padre’ [-Werror=unused-variable]
   53 |   TreeNode * padre = NULL;
      |              ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e05e0d6
Thu 09 May 2024 04:57:13 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:14: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode * parent = NULL;
      |              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
cc2e6c6
Thu 09 May 2024 05:01:41 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
667ed9e
Thu 09 May 2024 05:01:48 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode *parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5aad60f
Thu 09 May 2024 05:01:57 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode *parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4fb0e1a
Thu 09 May 2024 05:09:10 AM UTC: 
 treemap.c | 6 ------
 1 file changed, 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:14: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode * parent = NULL;
      |              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4fb0e1a
Thu 09 May 2024 05:13:08 AM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  12|6
total_score: 15/70
94ad79f
Thu 09 May 2024 05:14:22 AM UTC: 
 treemap.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  12|6
total_score: 15/70
7effc96
Thu 09 May 2024 05:15:31 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
222a705
Thu 09 May 2024 05:17:12 AM UTC: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  12|6
total_score: 15/70
d27b442
Thu 09 May 2024 05:19:44 AM UTC: 
 treemap.c | 30 ++++++++++++++++--------------
 1 file changed, 16 insertions(+), 14 deletions(-)
 tests:  12|6
total_score: 15/70
598606d
Thu 09 May 2024 05:20:19 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  13|5
total_score: 25/70
f061065
Thu 09 May 2024 05:21:06 AM UTC: 
 treemap.c | 35 +++++++++++++++--------------------
 1 file changed, 15 insertions(+), 20 deletions(-)
 tests:  13|5
total_score: 25/70
1fc87f7
Thu 09 May 2024 05:23:52 AM UTC: 
 treemap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|0
8f0d909
Thu 09 May 2024 05:24:41 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  20|3
total_score: 40/70
cfdfc69
Fri 10 May 2024 12:27:42 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  20|3
total_score: 40/70
4cc9ff7
Fri 10 May 2024 02:31:04 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  20|3
total_score: 40/70
c98f4e6
Sun 12 May 2024 02:18:02 AM UTC: 
 treemap.c | 70 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 70 insertions(+)
 tests:  0|0
9fc73c9
Sun 12 May 2024 02:34:00 AM UTC: 
 treemap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  23|2
total_score: 55/70
91cbaeb
Sun 12 May 2024 03:01:30 AM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  24|2
total_score: 55/70
9023f6b
Sun 12 May 2024 03:07:29 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  24|2
total_score: 55/70
466b081
Sun 12 May 2024 03:10:22 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  24|2
total_score: 55/70
c0fcfd6
